# argus

./: .env.example  .gitignore  EVALUATION.md  PROJECT.md  README.md  architecture_diagram.md  cognicore-ai-saas.aura.build-content.html  dashboard-design.md  details.txt  docker-compose.yml  issues.md  problems.md  pyproject.toml  submission.md
data/mitre/: techniques.json
deploy/: Caddyfile  README.md  argus-backend.service  argus-mcp.service  mcp-gateway.Caddyfile  provision.sh  push.sh
deploy/splunk/: limits.conf  web.conf
docs/: DETECTION_PROOF.md  SPLUNK_ALERT_ACTION.md
eval/: results.json
scripts/: setup_splunk.sh
splunk/argus_response/default/: alert_actions.conf  (+4 more)
src/argus/: __init__.py  agent.py  cli.py  config.py  connectors.py  enrich.py  eval.py  llm.py  mcp_client.py  mcp_server.py  mitre.py  models.py  monitor.py  prompts.py  server.py  threatintel.py
tests/: test_connectors.py  test_eval.py  test_mcp_client.py  test_mcp_server.py  test_splunk_alert_action.py
web/: .gitignore  README.md  mdx-components.tsx  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Animations.tsx  ArchitectureDiagram.tsx  ArgusMark.tsx  Background.tsx  CTASection.tsx  DashboardOverview.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  MaskedText.tsx  MetricsSection.tsx  Nav.tsx  Navbar.tsx  ParticleCanvas.tsx  PricingSection.tsx  TestimonialSection.tsx  VerticalLines.tsx
web/lib/: api.ts  docs-nav.ts  format.ts  sse.ts  types.ts  useInvestigation.ts
(+40 files in other folders)
