[project]
name = "argus-soc-agent"
version = "0.1.0"
description = "Argus — autonomous SOC investigation agent built on the Splunk MCP Server"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "anthropic>=0.40",
    "mcp>=1.2",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "rich>=13.9",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.scripts]
argus = "argus.cli:app"

[project.optional-dependencies]
dev = ["ruff>=0.6", "pytest>=8.3", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]

[tool.ruff]
line-length = 100
target-version = "py312"
